# Test

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
App/: CMakeLists.txt  Compiler.cpp  Compiler.h  MyApp.cpp  MyApp.h  main.cpp
Lib/: CMakeLists.txt  TestLib.cpp  TestLib.h
